--- a/app/views/quotes/_quote.html.erb
+++ b/app/views/quotes/_quote.html.erb
@@ -7,7 +7,7 @@
       <%= button_to "Delete",
                     quote_path(quote),
                     method: :delete,
-                    data: { turbo_confirm: 'Are you sure you wish to delete this quote?' },
+                    #data: { turbo_confirm: 'Are you sure you wish to delete this quote?' },
                     class: "btn btn--light" %>
       <%= link_to "Edit",
                   edit_quote_path(quote),
